fix(footer): enhance font size on mobile

--- a/app/front_assets/stylesheets/layout/footer.scss
+++ b/app/front_assets/stylesheets/layout/footer.scss
@@ -17,6 +17,7 @@ body {
 }
 
 .footer{
+  font-size: 12px;
   color: rgb(241,241,241);
   a{
     color: rgb(241,241,241);
